Add main heading and section headings

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
 		<header class="header">
 			<a href="#"
 			   class="logo">MDC</a>
-			<button class="hamburger"></button>
+			<button class="hamburger"
+					aria-label="Right Align"></button>
 			<nav class="navbar">
 				<ul>
 					<li>
@@ -42,7 +43,13 @@
 					</li>
 				</ul>
 			</nav>
+			<hgroup>
+				<h1 class="main-heading">Birds!</h1>
+			</hgroup>
 		</header>
+		<hgroup>
+			<h2 class="section-heading">Radiating Color</h2>
+		</hgroup>
 		<section>
 			<figure>
 				<img src="https://live.staticflickr.com/2535/4188650592_d245f48434_b.jpg"
@@ -50,8 +57,8 @@
 				<figcaption>
 					<p class="caption"><a
 						   href="https://www.flickr.com/photos/29468339@N02/4188650592">"Nature
-							bird"</a><span> by <a
-							   href="https://www.flickr.com/photos/29468339@N02">@Doug88888</a></span>
+							bird"</a> by <a
+						   href="https://www.flickr.com/photos/29468339@N02">@Doug88888</a>
 						is licensed under <a
 						   href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html"
 						   style="margin-right: 5px;">CC BY-NC-SA 2.0</a>
@@ -62,13 +69,17 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8e2b1e58-8163-4469-b8c7-b02b9245fd13" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8e2b1e58-8163-4469-b8c7-b02b9245fd13"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img
+								 src="https://search.creativecommons.org/static/img/cc-nc_icon.svg"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-sa_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-sa_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -91,9 +102,11 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=f0d21c53-9c7f-4114-b05c-95a318496671" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=f0d21c53-9c7f-4114-b05c-95a318496671"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-pdm_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-pdm_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -115,13 +128,18 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=e7078700-0b7c-4312-b936-886f08a27859" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=e7078700-0b7c-4312-b936-886f08a27859"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
 		</section>
+		<hgroup>
+			<h2 class="section-heading">Oh So Hungry!</h2>
+		</hgroup>
 		<section>
 			<figure>
 				<img src="https://live.staticflickr.com/7272/7633179468_3e19e45a0c_b.jpg"
@@ -141,9 +159,11 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=638bf359-7a9d-49d9-a4f4-2ac4f307021d" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=638bf359-7a9d-49d9-a4f4-2ac4f307021d"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -165,11 +185,14 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=3a2df48f-f7c7-40bd-a3d3-fed333751f6b" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=3a2df48f-f7c7-40bd-a3d3-fed333751f6b"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-nd_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-nd_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -181,7 +204,7 @@
 						   href="https://www.flickr.com/photos/23566085@N00/2570222219">"Sparrowhawk
 							with feather of a bird that seems to be very
 							dead."</a> by <a
-						   href="https://www.flickr.com/photos/23566085@N00">e³°°°</a></span>
+						   href="https://www.flickr.com/photos/23566085@N00">e³°°°</a>
 						is licensed under <a
 						   href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html"
 						   style="margin-right: 5px;">CC BY-SA 2.0</a>
@@ -192,15 +215,21 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=3143860b-0c5f-4a41-8315-e5cd90d2529b" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=3143860b-0c5f-4a41-8315-e5cd90d2529b"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-sa_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-sa_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
 		</section>
+		<hgroup>
+			<h2 class="section-heading">Majestic Poses and Flight</h2>
+		</hgroup>
 		<section>
 			<figure>
 				<img src="https://live.staticflickr.com/185/461452977_d3bbab8f86_b.jpg"
@@ -220,9 +249,11 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;">
 							<img style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=5e4924e4-c225-4015-be3a-b40bd7facdec" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=5e4924e4-c225-4015-be3a-b40bd7facdec"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -232,10 +263,10 @@
 				<figcaption>
 					<p class="caption"><a
 						   href="https://www.flickr.com/photos/26811962@N05/9459996145">"Beautiful
-							Bird"</a><span> by <a
-							   href="https://www.flickr.com/photos/26811962@N05">Steve
-								Wilson - over 10 million views Thanks
-								!!</a></span>
+							Bird"</a> by <a
+						   href="https://www.flickr.com/photos/26811962@N05">Steve
+							Wilson - over 10 million views Thanks
+							!!</a>
 						is licensed under <a
 						   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 						   style="margin-right: 5px;">CC BY 2.0</a>
@@ -246,9 +277,11 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=5344558e-8552-413d-86d7-3b0e05f432c5" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=5344558e-8552-413d-86d7-3b0e05f432c5"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -258,8 +291,8 @@
 				<figcaption>
 					<p class="caption"><a
 						   href="https://www.flickr.com/photos/53986933@N00/18013912912">"Bird
-							in Flight"</a><span> by <a
-							   href="https://www.flickr.com/photos/53986933@N00">snowpeak</a></span>
+							in Flight"</a> by <a
+						   href="https://www.flickr.com/photos/53986933@N00">snowpeak</a>
 						is licensed under <a
 						   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 						   style="margin-right: 5px;">CC BY 2.0</a>
@@ -270,13 +303,18 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=6276f93f-a4df-4515-8f6f-c626eed6f6c4" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=6276f93f-a4df-4515-8f6f-c626eed6f6c4"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
 		</section>
+		<hgroup>
+			<h2 class="section-heading">Vulnerability Alert!</h2>
+		</hgroup>
 		<section>
 			<figure>
 				<img src="https://live.staticflickr.com/2775/4484452509_c9a7f1edc1_b.jpg"
@@ -299,9 +337,11 @@
 					   rel="noopener noreferrer"
 					   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;">
 						<img style="height: inherit;margin-right: 3px;display: inline-block;"
-							 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=fecda44e-5c52-4d01-a12e-a5265fe7d00f" /><img
+							 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=fecda44e-5c52-4d01-a12e-a5265fe7d00f"
+							 alt="Creative Commons Logo" /><img
 							 style="height: inherit;margin-right: 3px;display: inline-block;"
-							 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+							 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+							 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -325,9 +365,11 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8f83f546-b9c4-4725-8318-bde1f3cb3ea5" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8f83f546-b9c4-4725-8318-bde1f3cb3ea5"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
@@ -353,9 +395,11 @@
 						   rel="noopener noreferrer"
 						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=20dce1a4-0ed4-4d67-943b-1c9b4f743dbe" /><img
+								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=20dce1a4-0ed4-4d67-943b-1c9b4f743dbe"
+								 alt="Creative Commons Logo" /><img
 								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a>
+								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
+								 alt="Creative Commons Logo" /></a>
 					</p>
 				</figcaption>
 			</figure>
