Fix hamburger.js typo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<footer class="site-credits">
 		<p>© 2021 Maria D. Campbell</p>
 	</footer>
-	<script src="scripts/hambuger.js"></script>
+	<script src="scripts/hamburger.js"></script>
 </body>
 
 </html>
