--- a/portfolio.html
+++ b/portfolio.html
@@ -54,31 +54,13 @@
 					<img src="https://live.staticflickr.com/2535/4188650592_d245f48434_b.jpg"
 						 alt="Nature bird">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/29468339@N02/4188650592">"Nature
-								bird"</a> by <a
+								bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/29468339@N02">@Doug88888</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY-NC-SA 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8e2b1e58-8163-4469-b8c7-b02b9245fd13"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-nc_icon.svg"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-sa_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -86,26 +68,14 @@
 					<img src="https://live.staticflickr.com/4444/37481401541_3c87cc7771_b.jpg"
 						 alt="To Brighten Up Even Your Darkest Night (Explored 10/3/17)">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/139235634@N04/37481401541">"To
 								Brighten Up Even Your Darkest Night (Explored
-								10/3/17)"</a> by <a
+								10/3/17)"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/139235634@N04">opheliosnaps</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/publicdomain/mark/1.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC PDM 1.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/publicdomain/mark/1.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=f0d21c53-9c7f-4114-b05c-95a318496671"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-pdm_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -113,25 +83,13 @@
 					<img src="https://live.staticflickr.com/1423/1061723063_3904758493_b.jpg"
 						 alt="baby bird">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/28396605@N00/1061723063">"baby
-								bird"</a> by <a
+								bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/28396605@N00">paparutzi</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=e7078700-0b7c-4312-b936-886f08a27859"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -144,25 +102,13 @@
 					<img src="https://live.staticflickr.com/7272/7633179468_3e19e45a0c_b.jpg"
 						 alt="Bird on a Wire">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/50898682@N07/7633179468">"Bird
-								on a Wire"</a> by <a
+								on a Wire"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/50898682@N07">AcrylicArtist</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=638bf359-7a9d-49d9-a4f4-2ac4f307021d"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -170,28 +116,15 @@
 					<img src="https://live.staticflickr.com/3767/9139004555_cbaa834ac6_b.jpg"
 						 alt="Green bird with a popcorn">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/8070463@N03/9139004555">"Green
 								bird with a popcorn"</a> by <a
+							   class="attribution-link"
 							   href="https://www.flickr.com/photos/8070463@N03">Tambako
 								the Jaguar</a> is licensed under <a
+							   class="attribution-link"
 							   href="https://creativecommons.org/licenses/by-nd/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY-ND 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by-nd/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=3a2df48f-f7c7-40bd-a3d3-fed333751f6b"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-nd_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -199,29 +132,14 @@
 					<img src="https://live.staticflickr.com/3010/2570222219_5240589a47_b.jpg"
 						 alt="Sparrowhawk with feather of a bird that seems to be very dead.">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/23566085@N00/2570222219">"Sparrowhawk
 								with feather of a bird that seems to be very
-								dead."</a> by <a
+								dead."</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/23566085@N00">e³°°°</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY-SA 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=3143860b-0c5f-4a41-8315-e5cd90d2529b"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-sa_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -234,25 +152,13 @@
 					<img src="https://live.staticflickr.com/185/461452977_d3bbab8f86_b.jpg"
 						 alt="Mynah bird">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/43145783@N00/461452977">"Mynah
-								bird"</a> by <a
+								bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/43145783@N00">foxypar4</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;">
-								<img style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=5e4924e4-c225-4015-be3a-b40bd7facdec"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -260,27 +166,15 @@
 					<img src="https://live.staticflickr.com/5526/9459996145_5fd9a1249b_b.jpg"
 						 alt="Beautiful Bird">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/26811962@N05/9459996145">"Beautiful
-								Bird"</a> by <a
+								Bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/26811962@N05">Steve
 								Wilson - over 10 million views Thanks
 								!!</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=5344558e-8552-413d-86d7-3b0e05f432c5"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -288,25 +182,13 @@
 					<img src="https://live.staticflickr.com/7737/18013912912_7d73ebb325_b.jpg"
 						 alt="Bird in Flight">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/53986933@N00/18013912912">"Bird
-								in Flight"</a> by <a
+								in Flight"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/53986933@N00">snowpeak</a>
-							is licensed under <a
+							is licensed under <a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
 							   style="margin-right: 5px;">CC BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=6276f93f-a4df-4515-8f6f-c626eed6f6c4"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -319,28 +201,15 @@
 					<img src="https://live.staticflickr.com/2775/4484452509_c9a7f1edc1_b.jpg"
 						 alt="Martin Mere Birds">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/93001633@N00/4484452509">"Martin
 								Mere Birds"</a> by
-							<a
+							<a class="attribution-link"
 							   href="https://www.flickr.com/photos/93001633@N00">BinaryApe</a>
 							is licensed under
-							<a
+							<a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
 								BY 2.0</a>
-						</p>
-						<p class="caption"
-						   <a
-						   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-						   target="_blank"
-						   rel="noopener noreferrer"
-						   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;">
-							<img style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=fecda44e-5c52-4d01-a12e-a5265fe7d00f"
-								 alt="Creative Commons Logo" /><img
-								 style="height: inherit;margin-right: 3px;display: inline-block;"
-								 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-								 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -348,27 +217,15 @@
 					<img src="https://live.staticflickr.com/3103/2551381540_4a052bf8c7_b.jpg"
 						 alt="New Baby Bird Rehabbers">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/98799884@N00/2551381540">"New
 								Baby Bird Rehabbers"</a> by
-							<a
+							<a class="attribution-link"
 							   href="https://www.flickr.com/photos/98799884@N00">audreyjm529</a>
 							is licensed under
-							<a
+							<a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
 								BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8f83f546-b9c4-4725-8318-bde1f3cb3ea5"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
@@ -376,29 +233,17 @@
 					<img src="https://live.staticflickr.com/3473/3837748712_219ccf427b_b.jpg"
 						 alt="African Caracal">
 					<figcaption>
-						<p class="caption"><a
+						<p class="caption"><a class="attribution-link"
 							   href="https://www.flickr.com/photos/44124348109@N01/3837748712">"African
 								Caracal"</a>
 							by
-							<a
+							<a class="attribution-link"
 							   href="https://www.flickr.com/photos/44124348109@N01">jurvetson</a>
 
 							is licensed under
-							<a
+							<a class="attribution-link"
 							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
 								BY 2.0</a>
-						</p>
-						<p class="caption">
-							<a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   target="_blank"
-							   rel="noopener noreferrer"
-							   style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=20dce1a4-0ed4-4d67-943b-1c9b4f743dbe"
-									 alt="Creative Commons Logo" /><img
-									 style="height: inherit;margin-right: 3px;display: inline-block;"
-									 src="https://search.creativecommons.org/static/img/cc-by_icon.svg"
-									 alt="Creative Commons Logo" /></a>
 						</p>
 					</figcaption>
 				</figure>
