Remove unwanted skills

--- a/resume.html
+++ b/resume.html
@@ -258,10 +258,8 @@
 							<li>Final Cut Pro <span class="exp">6 years</span>
 							</li>
 							<li>Git <span class="exp">6 years</span></li>
-							<li>Github <span class="exp">6 years</span></li>
 							<li>Heroku <span class="exp">3 years</span></li>
 							<li>HTML5 <span class="exp">6 years</span></li>
-							<li>JetBrains <span class="exp">5 years</span></li>
 							<li>Jira <span class="exp">3 years</span></li>
 							<li>Modern JavaScript <span class="exp">5
 									years</span></li>
@@ -321,6 +319,35 @@
 							Literature<br /><strong>Bachelor
 								of Arts</strong> <b>N.Y., N.Y.</b><br />
 						</p>
+					</section>
+					<section class="languages">
+						<h2>Languages</h2>
+						<p>French • Serbo-Coratian • Learning Spanish</p>
+					</section>
+					<section>
+						<h2>Achievements</h2>
+						<h3>Presenter 2017</h3>
+						<ul>
+							<li>
+								<a>React Workflow Presentation React NYC Meetup
+									9.28.17</a>
+							</li>
+							<li>
+								<a>Evolution in Design & Development React Camp
+									11.18.17</a>
+							</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Interests</h3>
+						<ul>
+							<li>When I’m not coding, I love to go to the
+								countryside
+								to recharge, watch Film Noir and mystery movies,
+								listen to alternative and soul music, ponder
+								over
+								surrealist art, and create exotic cuisine.</li>
+						</ul>
 					</section>
 				</aside>
 			</div>
