--- a/resume.html
+++ b/resume.html
@@ -328,11 +328,17 @@
 						<h3>Presenter 2017</h3>
 						<ul>
 							<li>
-								<a>React Workflow Presentation React NYC Meetup
+								<a href="https://interglobalmedia.github.io/react-workflow-updated-2018/#/"
+								   target="_blank"
+								   rel="noreferrer noopener">React
+									Workflow Presentation React NYC Meetup
 									9.28.17</a>
 							</li>
 							<li>
-								<a>Evolution in Design & Development React Camp
+								<a href="https://interglobalmedia.github.io/evolution-in-design-and-development/#0"
+								   target="_blank"
+								   rel="noreferrer noopener">Evolution
+									in Design & Development React Camp
 									11.18.17</a>
 							</li>
 						</ul>
