Add best practice to rest of external links

--- a/resume.html
+++ b/resume.html
@@ -217,23 +217,41 @@
 					<section class="sample-work">
 						<h2>Sample Work</h2>
 						<ul>
-							<li><a
-								   href="https://pacific-savannah-76659.herokuapp.com/">Chattrbox</a>
+							<li><a href="https://pacific-savannah-76659.herokuapp.com/"
+								   target="_blank"
+								   rel="
+								   noreferrer
+								   noopener">Chattrbox</a>
 							</li>
 							<li><a href="https://interglobalmedia.github.io/speech-to-text-app/"
-								   target="_blank">Speech To Text App</a></li>
+								   target="_blank"
+								   rel="
+								noreferrer
+								noopener">Speech To Text App</a></li>
 							<li><a href="https://interglobalmedia.github.io/making-music-in-the-browser/"
-								   target="_blank">Making Music in the
+								   target="_blank"
+								   rel="
+								noreferrer
+								noopener">Making Music in the
 									Browser</a></li>
 							<li><a href="https://interglobalmedia.github.io/web-audio-api-ajax/"
-								   target="_blank">Web Audio API and AJAX</a>
+								   target="_blank"
+								   rel="
+								noreferrer
+								noopener">Web Audio API and AJAX</a>
 							</li>
 							<li><a href="https://interglobalmedia-weather-app.herokuapp.com/"
-								   target="_blank">Node.js Server Weather
+								   target="_blank"
+								   rel="
+								noreferrer
+								noopener">Node.js Server Weather
 									App</a>
 							</li>
 							<li><a href="https://interglobalmedia.github.io/local-storage-session-storage-fun-form/"
-								   target="_blank">Storage Fun with Forms</a>
+								   target="_blank"
+								   rel="
+								noreferrer
+								noopener">Storage Fun with Forms</a>
 							</li>
 							<!-- <li><a href="https://prod.sandia.gov/wbt/HW100/" target="_blank">Hot Work Training (HW100)</a></li>-->
 						</ul>
@@ -362,12 +380,18 @@
 					<p class="tel"><strong><span
 								  class="type">Cell</span>:</strong>
 						<a href="callto:+6463696437"
-						   rel="me">646-369-6437</a>
+						   target="_blank"
+						   rel="
+						   noreferrer
+						   noopener">646-369-6437</a>
 					</p>
 					<p class="email"><strong>Email:</strong> <a
 						   href="mailto:interglobalmedia@gmail.com"
 						   title="Email Maria D. Campbell"
-						   rel="me">interglobalmedia@gmail.com</a></p>
+						   target="_blank"
+						   rel="
+						   noreferrer
+						   noopener">interglobalmedia@gmail.com</a></p>
 				</section>
 				<nav class="footer-nav">
 					<ul>
