--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 	<main>
 		<div class="page">
 			<header>
-				<h1>Maria D. Campbell</h1>
+				<h1><a href="index.html">Maria D. Campbell</a></h1>
 				<h2>Full Stack Developer</h2>
 				<p>Full Stack Developer who is passionate about designing,
 					developing, and teaching
