Add interests class

--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 					efficient manner, thereby preparing them for jobs in Web
 					Design and Development.</p>
 			</header>
-			<section class="resume_content">
+			<section class="professional_experience">
 				<article>
 					<h2>Professional
 						Experience</h2>
@@ -361,7 +361,7 @@
 							</li>
 						</ul>
 					</section>
-					<section>
+					<section class="interests">
 						<h3>Interests</h3>
 						<ul>
 							<li>When I’m not coding, I love to go to the
