--- a/resume.html
+++ b/resume.html
@@ -304,7 +304,8 @@
 								  class="end"> &#x2010; 2/2016</time>
 						</h3>
 						<p>Web Development 100 &<br />
-							Front-End Development 101
+							Front-End Development 101<br />
+							<strong>Certificate</strong>
 							<b>N.Y., N.Y.</b>
 						</p>
 						<h3>New York Coding and Design Academy<br />
