Add achievements class

--- a/resume.html
+++ b/resume.html
@@ -342,7 +342,7 @@
 						<h2>Languages</h2>
 						<p>French • Serbo-Coratian • Learning Spanish</p>
 					</section>
-					<section>
+					<section class="achievements">
 						<h2>Achievements</h2>
 						<h3>Presenter 2017</h3>
 						<ul>
