Fix language typo

--- a/resume.html
+++ b/resume.html
@@ -340,7 +340,7 @@
 					</section>
 					<section class="languages">
 						<h2>Languages</h2>
-						<p>French • Serbo-Coratian • Learning Spanish</p>
+						<p>French • Serbo-Croatian • Learning Spanish</p>
 					</section>
 					<section class="achievements">
 						<h2>Achievements</h2>
