Add google voice and change anchor element content

--- a/resume.html
+++ b/resume.html
@@ -380,11 +380,11 @@
 				<section class="contact-info">
 					<p class="tel"><strong><span
 								  class="type">Cell</span>:</strong>
-						<a href="callto:+6463696437"
+						<a href="tel:+1-646-820-7539"
 						   target="_blank"
 						   rel="
 						   noreferrer
-						   noopener">646-369-6437</a>
+						   noopener">1-646-820-7539</a>
 					</p>
 					<p class="email"><strong>Email:</strong> <a
 						   href="mailto:interglobalmedia@gmail.com"
