--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
 				</ul>
 			</nav>
 		</header>
-		<h1 id="main-heading">This is the main heading</h1>
-		<section>
-			<article>
-				<h2>This is an article heading</h2>
-				<p>This is some article content.</p>
+		<section class="landing-section">
+			<h1 id="landing-main-heading">Hi. I'm Maria.</h1>
+			<article class="landing-article">
+				<h2>I'm a full stack developer
+					and
+					designer.</h2>
+				<p>Explore this site to learn more
+					about me.</p>
+				<a href="portfolio.html">Enter</a>
 			</article>
 		</section>
 	</main>
