Add aria-label to hamburger button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<header class="header">
 			<a class="logo"
 			   href="#">MDC</a>
-			<button class="hamburger"></button>
+			<button class="hamburger"
+					aria-label="Right-Align"></button>
 			<nav class="navbar">
 				<ul>
 					<li>
