Fix z-index backdrop home remove background header home

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<main class="Site-content">
-		<header class="header">
+		<header class="index-header">
 			<a class="logo"
 			   href="#">MDC</a>
 			<button class="hamburger"
