refactor markup for quote page

--- a/about.html
+++ b/about.html
@@ -8,15 +8,16 @@
 		  content="width=device-width, initial-scale=1.0">
 	<title>About Maria Campbell</title>
 	<link rel="stylesheet"
-		  href="styles/main.css">
+		  href="styles/quote-cloud.css">
 </head>
 
 <body>
 	<main class="Site-content">
-		<header class="header">
+		<header class="about-header">
 			<a href="#"
 			   class="logo">MDC</a>
-			<button class="hamburger"></button>
+			<button class="hamburger"
+					aria-label="Right-Align"></button>
 			<nav class="navbar">
 				<ul>
 					<li>
@@ -42,17 +43,17 @@
 				</ul>
 			</nav>
 		</header>
-		<h1 id="main-heading">This is the main heading</h1>
-		<section>
-			<article>
-				<h2>This is an article heading</h2>
-				<p>This is some article content.</p>
+		<h1>Favorite Quotes</h1>
+		<section class="quote-container">
+			<article class="quote-cloud">
+				<blockquote></blockquote>
 			</article>
 		</section>
 	</main>
 	<footer class="site-credits">
 		<p>© Maria D. Campbell</p>
 	</footer>
+	<script src="scripts/hover.js"></script>
 	<script src="scripts/hamburger.js"></script>
 </body>
 
