Add text text content to h2

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 		<h1>Favorite Quotes</h1>
 		<section class="quote-container">
 			<article class="quote-cloud">
-				<h2></h2>
+				<h2>Click for quote!</h2>
 				<blockquote></blockquote>
 			</article>
 		</section>
