--- a/resume.html
+++ b/resume.html
@@ -400,7 +400,7 @@
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="resume.html">Résumé</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="index.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
 			</footer>
