Move logo and hamburger into nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,12 @@
 <body>
 	<main class="Site-content">
 		<header class="header">
-			<a href="#"
-			   class="logo">MDC</a>
-			<button class="hamburger"
-					aria-label="Right Align"></button>
 			<nav class="navbar">
-				<ul>
+				<a href="#"
+				   class="logo">MDC</a>
+				<button class="hamburger"
+						aria-label="Right Align"></button>
+				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
 						   href="index.html">Home</a>
