--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
 	<title>Maria Campbell's Portfolio Site Landing Page</title>
+	<link rel="preconnect"
+		  href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap"
+		  rel="stylesheet">
 	<link rel="stylesheet"
 		  href="styles/main.css">
 </head>
@@ -14,12 +18,12 @@
 <body>
 	<main class="Site-content">
 		<header class="index-header">
-			<a class="logo"
-			   href="#">MDC</a>
-			<button class="hamburger"
-					aria-label="Right-Align"></button>
 			<nav class="navbar">
-				<ul>
+				<a href="#"
+				   class="logo">MDC</a>
+				<button class="hamburger"
+						aria-label="Right-Align"></button>
+				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
 						   href="index.html">Home</a>
