--- a/about.html
+++ b/about.html
@@ -14,12 +14,12 @@
 <body>
 	<main class="Site-content">
 		<header class="about-header">
-			<a href="#"
-			   class="logo">MDC</a>
-			<button class="hamburger"
-					aria-label="Right-Align"></button>
 			<nav class="navbar">
-				<ul>
+				<a href="#"
+				   class="logo">MDC</a>
+				<button class="hamburger"
+						aria-label="Right-Align"></button>
+				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
 						   href="index.html">Home</a>
