Add new png icon to navigation

--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
 	<title>About Maria Campbell</title>
+	<link rel="preconnect"
+		  href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
+		  rel="stylesheet">
 	<link rel="stylesheet"
 		  href="styles/quote-cloud.css">
 </head>
@@ -16,7 +20,9 @@
 		<header class="about-header">
 			<nav class="navbar">
 				<a href="#"
-				   class="logo">MDC</a>
+				   class="logo"><img class="brand"
+						 src="images/about_brand.png"
+						 alt="brand"></a>
 				<button class="hamburger"
 						aria-label="Right-Align"></button>
 				<ul class="main-nav">
@@ -52,7 +58,7 @@
 		</section>
 	</main>
 	<footer class="site-credits">
-		<p>© Maria D. Campbell</p>
+		<p>© 2021 Maria D. Campbell</p>
 	</footer>
 	<script src="scripts/hover.js"></script>
 	<script src="scripts/hamburger.js"></script>
