--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Maria Campbell's Portfolio Site Landing Page</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap"
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
 		  rel="stylesheet">
 	<link rel="stylesheet"
 		  href="styles/main.css">
@@ -20,7 +20,9 @@
 		<header class="index-header">
 			<nav class="navbar">
 				<a href="#"
-				   class="logo">MDC</a>
+				   class="logo"><img class="brand"
+						 src="images/portfolio_brand.png"
+						 alt="brand"></a>
 				<button class="hamburger"
 						aria-label="Right-Align"></button>
 				<ul class="main-nav">
