--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,10 @@
 		  content="width=device-width, initial-scale=1.0">
 	<title>Maria Campbell's Creative Commons Image Gallery with Attributions
 	</title>
+	<link rel="preconnect"
+		  href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
+		  rel="stylesheet">
 	<link rel='stylesheet'
 		  href="styles/main.css">
 </head>
@@ -17,7 +21,9 @@
 		<header class="header">
 			<nav class="navbar">
 				<a href="#"
-				   class="logo">MDC</a>
+				   class="logo"><img class="brand"
+						 src="images/portfolio_brand.png"
+						 alt="brand"></a>
 				<button class="hamburger"
 						aria-label="Right Align"></button>
 				<ul class="main-nav">
