--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
-	<title>About Maria Campbell</title>
+		  content="width=devie-width, initial-scale=1.0">
+	<title>Maria Campbell's Favorite Quotes</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
@@ -17,11 +17,11 @@
 
 <body>
 	<main class="Site-content">
-		<header class="about-header">
+		<header class="header">
 			<nav class="navbar">
 				<a href="#"
 				   class="logo"><img class="brand"
-						 src="images/about_brand.png"
+						 src="images/portfolio_brand.png"
 						 alt="brand"></a>
 				<button class="hamburger"
 						aria-label="Right-Align"></button>
@@ -49,8 +49,8 @@
 				</ul>
 			</nav>
 		</header>
-		<h1>Favorite Quotes</h1>
 		<section class="quote-container">
+			<h1>Favorite Quotes</h1>
 			<article class="quote-cloud">
 				<h2>Click for quote!</h2>
 				<blockquote></blockquote>
@@ -60,8 +60,8 @@
 	<footer class="site-credits">
 		<p>© 2021 Maria D. Campbell</p>
 	</footer>
-	<script src="scripts/hover.js"></script>
 	<script src="scripts/hamburger.js"></script>
+	<script src="scripts/hover.js"></script>
 </body>
 
 </html>
