Add middle initial tweak metadata

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=devie-width, initial-scale=1.0">
-	<title>Maria Campbell's Favorite Quotes</title>
+	<title>Maria D. Campbell's Favorite Quotes</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
