--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
-	<title>Contact Maria Campbell</title>
+	<title>Contact Maria D. Campbell</title>
 	<link rel="stylesheet"
 		  href="styles/main.css">
 </head>
