--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 	<meta name="
 		  Author"
 		  content="Maria D. Campbell">
-	<title>Maria Campbell's Online Résumé</title>
+	<title>Maria D. Campbell's Online Résumé</title>
 	<link rel="stylesheet"
 		  href="styles/resume.css">
 </head>
