--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
-	<title>Maria Campbell's Portfolio Site Landing Page</title>
+	<title>Maria D. Campbell's Portfolio Site Landing Page</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
