--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
-	<title>Maria Campbell's Creative Commons Image Gallery with Attributions
+	<title>Maria D. Campbell's Portfolio Image Gallery
 	</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
