Make href attibute point to index.html

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
-				<a href="#"
+				<a href="index.html"
 				   class="logo"><img class="brand"
 						 src="images/portfolio_brand.png"
 						 alt="brand"></a>
