--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
 	<title>Contact Maria D. Campbell</title>
+	<link rel="preconnect"
+		  href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
+		  rel="stylesheet">
 	<link rel="stylesheet"
 		  href="styles/main.css">
 </head>
@@ -14,11 +18,15 @@
 <body>
 	<main class="Site-content">
 		<header class="header">
-			<a href="#"
-			   class="logo">MDC</a>
-			<button class="hamburger"></button>
 			<nav class="navbar">
-				<ul>
+				<a href="index.html"
+				   class="logo">
+					<img class="brand"
+						 src="images/portfolio_brand.png"
+						 alt="brand">
+				</a>
+				<button class="hamburger"></button>
+				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
 						   href="index.html">Home</a>
@@ -42,13 +50,35 @@
 				</ul>
 			</nav>
 		</header>
-		<h1 id="main-heading">This is the main heading</h1>
-		<section>
-			<article>
-				<h2>This is an article heading</h2>
-				<p>This is some article content.</p>
-			</article>
-		</section>
+		<form id="contact-form">
+			<h1 id="main-heading">Contact Maria</h1>
+			<ul class="form-fields">
+				<li>
+					<label for="firstname">First Name:</label>
+					<input type="text"
+						   name="firstname"
+						   id="firstname"
+						   placeholder="First Name"
+						   required>
+				</li>
+				<li>
+					<label for="lastname">Last Name:</label>
+					<input type="text"
+						   name="lastname"
+						   id="lastname"
+						   placeholder="Last Name"
+						   required>
+				</li>
+				<li>
+					<label for="email">Email:</label>
+					<input type="email"
+						   name="email"
+						   id="email"
+						   placeholder="email"
+						   required>
+				</li>
+			</ul>
+		</form>
 	</main>
 	<footer class="site-credits">
 		<p>© 2021 Maria D. Campbell</p>
