Remove inline styles anchor elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,8 +66,8 @@
 								bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/29468339@N02">@Doug88888</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY-NC-SA 2.0</a>
+							   href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html">CC
+								BY-NC-SA 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -81,8 +81,8 @@
 								10/3/17)"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/139235634@N04">opheliosnaps</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/publicdomain/mark/1.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC PDM 1.0</a>
+							   href="https://creativecommons.org/publicdomain/mark/1.0/?ref=ccsearch&atype=html">CC
+								PDM 1.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -95,8 +95,8 @@
 								bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/28396605@N00">paparutzi</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY 2.0</a>
+							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+								BY 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -114,8 +114,8 @@
 								on a Wire"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/50898682@N07">AcrylicArtist</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY 2.0</a>
+							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+								BY 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -130,8 +130,8 @@
 							   href="https://www.flickr.com/photos/8070463@N03">Tambako
 								the Jaguar</a> is licensed under <a
 							   class="attribution-link"
-							   href="https://creativecommons.org/licenses/by-nd/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY-ND 2.0</a>
+							   href="https://creativecommons.org/licenses/by-nd/2.0/?ref=ccsearch&atype=html">CC
+								BY-ND 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -145,8 +145,8 @@
 								dead."</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/23566085@N00">e³°°°</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY-SA 2.0</a>
+							   href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html">CC
+								BY-SA 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -164,8 +164,8 @@
 								bird"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/43145783@N00">foxypar4</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY 2.0</a>
+							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+								BY 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -180,8 +180,8 @@
 								Wilson - over 10 million views Thanks
 								!!</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY 2.0</a>
+							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+								BY 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
@@ -194,8 +194,8 @@
 								in Flight"</a> by <a class="attribution-link"
 							   href="https://www.flickr.com/photos/53986933@N00">snowpeak</a>
 							is licensed under <a class="attribution-link"
-							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
-							   style="margin-right: 5px;">CC BY 2.0</a>
+							   href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html">CC
+								BY 2.0</a>
 						</p>
 					</figcaption>
 				</figure>
