--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
 		  rel="stylesheet">
 	<link rel="stylesheet"
-		  href="styles/main.css">
+		  href="styles/contact.css">
 </head>
 
 <body>
@@ -50,34 +50,40 @@
 				</ul>
 			</nav>
 		</header>
-		<form id="contact-form">
-			<h1 id="main-heading">Contact Maria</h1>
-			<ul class="form-fields">
-				<li>
-					<label for="firstname">First Name:</label>
-					<input type="text"
-						   name="firstname"
-						   id="firstname"
-						   placeholder="First Name"
-						   required>
-				</li>
-				<li>
-					<label for="lastname">Last Name:</label>
-					<input type="text"
-						   name="lastname"
-						   id="lastname"
-						   placeholder="Last Name"
-						   required>
-				</li>
-				<li>
-					<label for="email">Email:</label>
-					<input type="email"
-						   name="email"
-						   id="email"
-						   placeholder="email"
-						   required>
-				</li>
-			</ul>
+		<form action="submit.html"
+			  id="userForm">
+			<h1 id="main-contact-heading">Contact Maria</h1>
+			<fieldset>
+				<label for="firstname">First Name:</label>
+				<input type="text"
+					   name="firstname"
+					   id="firstname"
+					   placeholder="First Name here"
+					   required>
+			</fieldset>
+			<fieldset>
+				<label for="lastname">Last Name:</label>
+				<input type="text"
+					   name="lastname"
+					   id="lastname"
+					   placeholder="Last Name here"
+					   required>
+			</fieldset>
+			<fieldset>
+				<label for="email">Email:</label>
+				<input type="email"
+					   name="email"
+					   id="email"
+					   placeholder="Email here"
+					   required>
+			</fieldset>
+			<fieldset>
+				<legend>Submit Info:</legend>
+				<button type="submit"
+						form="userForm"
+						id="btn">Submit
+				</button>
+			</fieldset>
 		</form>
 	</main>
 	<footer class="site-credits">
