Add html symbol entity for dagger to footer credits

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 		</section>
 	</main>
 	<footer class="site-credits">
-		<p>© 2021 Maria D. Campbell</p>
+		<p>&#10013; © 2021 Maria D. Campbell &#10013;</p>
 	</footer>
 	<script src="scripts/hamburger.js"></script>
 	<script src="scripts/hover.js"></script>
