--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 		</form>
 	</main>
 	<footer class="site-credits">
-		<p>© 2021 Maria D. Campbell</p>
+		<p>&#10013; © 2021 Maria D. Campbell &#10013;</p>
 	</footer>
 	<script src="scripts/hamburger.js"></script>
 </body>
