Add aria-label attr

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
 						 src="images/portfolio_brand.png"
 						 alt="brand">
 				</a>
-				<button class="hamburger"></button>
+				<button class="hamburger"
+						aria-label="Right Align"></button>
 				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
@@ -81,7 +82,8 @@
 				<legend>Submit Info:</legend>
 				<button type="submit"
 						form="userForm"
-						id="btn">Submit
+						id="btn"
+						aria-label="Left Align">Submit
 				</button>
 			</fieldset>
 		</form>
