--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en"
-	  dir="ltr">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible"
+		  content="IE=edge">
+	<title>Submit Form Page</title>
+	<meta name="description"
+		  content="">
 	<meta name="viewport"
-		  content="width=device-width, initial-scale=1.0">
-	<title>Contact Maria D. Campbell</title>
-	<link rel="preconnect"
-		  href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
+		  content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro"
 		  rel="stylesheet">
 	<link rel="stylesheet"
-		  href="styles/contact.css">
+		  type="text/css"
+		  media="screen"
+		  href="styles/contact.css" />
 </head>
 
 <body>
@@ -25,8 +28,7 @@
 						 src="images/portfolio_brand.png"
 						 alt="brand">
 				</a>
-				<button class="hamburger"
-						aria-label="Right Align"></button>
+				<button class="hamburger"></button>
 				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
@@ -51,42 +53,10 @@
 				</ul>
 			</nav>
 		</header>
-		<form action="submit.html"
-			  id="userForm">
-			<h1 id="main-contact-heading">Contact Maria</h1>
-			<fieldset>
-				<label for="firstname">First Name:</label>
-				<input type="text"
-					   name="firstname"
-					   id="firstname"
-					   placeholder="First Name here"
-					   required>
-			</fieldset>
-			<fieldset>
-				<label for="lastname">Last Name:</label>
-				<input type="text"
-					   name="lastname"
-					   id="lastname"
-					   placeholder="Last Name here"
-					   required>
-			</fieldset>
-			<fieldset>
-				<label for="email">Email:</label>
-				<input type="email"
-					   name="email"
-					   id="email"
-					   placeholder="Email here"
-					   required>
-			</fieldset>
-			<fieldset>
-				<legend>Submit Info:</legend>
-				<button type="submit"
-						form="userForm"
-						id="btn"
-						aria-label="Left Align">Submit
-				</button>
-			</fieldset>
-		</form>
+		<article class="submit-article">
+			<h1 class="submit-main-heading">Your form submission was successful!
+			</h1>
+		</article>
 	</main>
 	<footer class="site-credits">
 		<p>&#10013; © 2021 Maria D. Campbell &#10013;</p>
