--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+	  dir="ltr">
 
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible"
-		  content="IE=edge">
-	<title>Submit Form Page</title>
-	<meta name="description"
-		  content="">
 	<meta name="viewport"
-		  content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro"
+		  content="width=device-width, initial-scale=1.0">
+	<title>Contact Maria D. Campbell</title>
+	<link rel="preconnect"
+		  href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400&display=swap"
 		  rel="stylesheet">
 	<link rel="stylesheet"
-		  type="text/css"
-		  media="screen"
-		  href="styles/contact.css" />
+		  href="styles/contact.css">
 </head>
 
 <body>
@@ -28,7 +25,8 @@
 						 src="images/portfolio_brand.png"
 						 alt="brand">
 				</a>
-				<button class="hamburger"></button>
+				<button class="hamburger"
+						aria-label="Right Align"></button>
 				<ul class="main-nav">
 					<li>
 						<a class="menu-link"
@@ -53,10 +51,66 @@
 				</ul>
 			</nav>
 		</header>
-		<article class="submit-article">
-			<h1 class="submit-main-heading">Your form submission was successful!
-			</h1>
-		</article>
+		<div class="contact-form-wrapper">
+			<form action="submit.html"
+				  id="userForm">
+				<h1 id="main-contact-heading">Contact Info for Maria</h1>
+				<fieldset>
+					<label for="firstname">First Name:</label>
+					<input type="text"
+						   name="firstname"
+						   id="firstname"
+						   placeholder="First Name here"
+						   required>
+				</fieldset>
+				<fieldset>
+					<label for="lastname">Last Name:</label>
+					<input type="text"
+						   name="lastname"
+						   id="lastname"
+						   placeholder="Last Name here"
+						   required>
+				</fieldset>
+				<fieldset>
+					<label for="email">Email:</label>
+					<input type="email"
+						   name="email"
+						   id="email"
+						   placeholder="Email here"
+						   required>
+				</fieldset>
+				<fieldset>
+					<legend>Submit Info:</legend>
+					<button type="submit"
+							form="userForm"
+							id="btn"
+							aria-label="Left Align">Submit
+					</button>
+				</fieldset>
+			</form>
+			<section class="contact-info">
+				<h2>Contact Maria</h2>
+				<div class="info-wrapper">
+					<fieldset>
+						<p class="tel"><strong><span
+									  class="type">Cell</span>:</strong>
+							<a href="tel:+1-646-820-7539"
+							   target="_blank"
+							   rel="
+						   noreferrer
+						   noopener">1-646-820-7539</a>
+						</p>
+						<p class="email"><strong>Email:</strong> <a
+							   href="mailto:interglobalmedia@gmail.com"
+							   title="Email Maria D. Campbell"
+							   target="_blank"
+							   rel="
+						   noreferrer
+						   noopener">interglobalmedia@gmail.com</a></p>
+					</fieldset>
+				</div>
+			</section>
+		</div>
 	</main>
 	<footer class="site-credits">
 		<p>&#10013; © 2021 Maria D. Campbell &#10013;</p>
