Add new input attributes

--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,7 @@
 						   name="email"
 						   id="email"
 						   placeholder="Email here"
+						   pattern="[a-z0-9._%+-]+@[a-z)-9.-]+\.[a-z]{2,}$"
 						   required>
 				</fieldset>
 				<fieldset>
