--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=devie-width, initial-scale=1.0">
+	<meta name="description"
+		  content="Get to know Maria D. Campbell through her choice of favorite quotes and backdrop background images.">
+	<meta name="
+	  	  		  Author"
+		  content="Maria D. Campbell">
 	<title>Maria D. Campbell's Favorite Quotes</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
