--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+		  content="How to contact Maria D. Campbell via email or cell phone and provide her with your contact information as well.">
+	<meta name="
+	  		  Author"
+		  content="Maria D. Campbell">
 	<title>Contact Maria D. Campbell</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
