--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+		  content="Welcome to the landing page of Maria D. Campbell's portfolio site, where she can introduce herself to you!">
+	<meta name="
+	  	  		  Author"
+		  content="Maria D. Campbell">
 	<title>Maria D. Campbell's Portfolio Site Landing Page</title>
 	<link rel="preconnect"
 		  href="https://fonts.gstatic.com">
