Tweak meta description content attribute value

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="Welcome to Maria D. Campbell's Portfolio Image Gallery, where she displays a curation of images of various bird species hand picked from Creative Commons Search tool.">
+		  content="Welcome to Maria D. Campbell's Portfolio Image Gallery, where she displays a curation of images of various bird species, hand picked from Creative Commons Search tool.">
 	<meta name="
 	  	  		  Author"
 		  content="Maria D. Campbell">
