Make author lowercase

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<meta name="description"
 		  content="How to contact Maria D. Campbell via email or cell phone and provide her with your contact information as well.">
 	<meta name="
-	  		  Author"
+	  		  author"
 		  content="Maria D. Campbell">
 	<title>Contact Maria D. Campbell</title>
 	<link rel="preconnect"
