--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description"
 		  content="Welcome to the landing page of Maria D. Campbell's portfolio site, where she can introduce herself to you!">
 	<meta name="
-	  	  		  Author"
+	  	  		  author"
 		  content="Maria D. Campbell">
 	<title>Maria D. Campbell's Portfolio Site Landing Page</title>
 	<link rel="preconnect"
