--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 		  content="Babel JavaScript Compiler, CSS, CSS3, CSS Flexbox, Command Line Interface, CSS Grid, Embedded JavaScript (EJS), ECMAScript 6 Plus, ES6 Modules, Express.js, Final Cut Pro, Git, Github, Heroku
 , Final Cut Pro, Git. Github, Heroku, HTML5, JetBrains, Jira, Modern JavaScript, MongoDB, Netlify, Netlify CMS, Node.js, NPM, PostreSQL, Python 3.8+, React, SASS (SCSS), Webpack, WordPress">
 	<meta name="
-		  Author"
+		  author"
 		  content="Maria D. Campbell">
 	<title>Maria D. Campbell's Online Résumé</title>
 	<link rel="stylesheet"
