--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<meta name="description"
 		  content="Get to know Maria D. Campbell through her choice of favorite quotes and backdrop background images.">
 	<meta name="
-	  	  		  Author"
+	  	  		  author"
 		  content="Maria D. Campbell">
 	<title>Maria D. Campbell's Favorite Quotes</title>
 	<link rel="preconnect"
