--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 	<meta name="description"
 		  content="Welcome to Maria D. Campbell's Portfolio Image Gallery, where she displays a curation of images of various bird species, hand picked from Creative Commons Search tool.">
 	<meta name="
-	  	  		  Author"
+	  	  		  author"
 		  content="Maria D. Campbell">
 	<title>Maria D. Campbell's Portfolio Image Gallery
 	</title>
