Add warning box re dummy form

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		  content="How to contact Maria D. Campbell via email or cell phone and provide her with your contact information as well.">
+		  content="How to contact Maria D. Campbell via email or cell phone and a demonstration-only (dummy) form on providing her with your contact information as well.">
 	<meta name="
 	  		  author"
 		  content="Maria D. Campbell">
@@ -94,6 +94,21 @@
 					</button>
 				</fieldset>
 			</form>
+			<section class="warning">
+				<h2>Warning</h2>
+				<div class="warning-wrapper">
+					<fieldset>
+						<p>The <span>contact submission form</span> above is for
+							<span>styling
+								demonstration
+								purposes</span>
+							only. It is not a real form that submits or saves
+							your
+							information anywhere.
+						</p>
+					</fieldset>
+				</div>
+			</section>
 			<section class="contact-info">
 				<h2>Contact Maria</h2>
 				<div class="info-wrapper">
