--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
 				<div class="warning-wrapper">
 					<fieldset>
 						<p>The <span>contact submission form</span> above is for
-							<span>styling
+							<span>
 								demonstration
 								purposes</span>
 							only. It is not a real form that submits or saves
