Add p text content re prototype refactor p element

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 				<h2>I'm a full stack developer
 					and
 					designer.</h2>
-				<p>Explore this site to learn more
+				<p>This site is a prototype for my Web Design 1 students
+					building their own personal portfolio sites. Explore this
+					site to learn more
 					about me.</p>
 				<a href="portfolio.html">Enter</a>
 			</article>
