Remove img png add back text wrapped in anchor element

--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,7 @@
 		<header class="header">
 			<nav class="navbar">
 				<a href="index.html"
-				   class="logo">
-					<img class="brand"
-						 src="images/portfolio_brand.png"
-						 alt="brand">
-				</a>
+				   class="brand">MDC</a>
 				<button class="hamburger"
 						aria-label="Right Align"></button>
 				<ul class="main-nav">
