--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,8 @@
 	<main class="Site-content">
 		<header class="header">
 			<nav class="navbar">
-				<a href="#"
-				   class="logo"><img class="brand"
-						 src="images/portfolio_brand.png"
-						 alt="brand"></a>
+				<a href="index.html"
+				   class="brand">MDC</a>
 				<button class="hamburger"
 						aria-label="Right Align"></button>
 				<ul class="main-nav">
