Edit html symbol entity

--- a/portfolio.html
+++ b/portfolio.html
@@ -261,7 +261,7 @@
 		</article>
 	</main>
 	<footer class="site-credits">
-		<p>&#10013; © 2021 Maria D. Campbell &#10013;</p>
+		<p>&#x2020; © 2021 Maria D. Campbell &#x2020;</p>
 	</footer>
 	<script src="scripts/hamburger.js"></script>
 </body>
