Shorten work position

--- a/resume.html
+++ b/resume.html
@@ -187,8 +187,8 @@
 						</ul>
 					</section>
 					<section>
-						<h3>Exec. Asst/Internship
-							Coordinator <span class="time"><time
+						<h3>Exec. Asst/Intern.
+							Coord. <span class="time"><time
 									  datetime="1998-03-10"
 									  class="start-time">1998</time>
 								&#8211;
